# job-search-gmail-mcp

./: .gitignore  CONTRIBUTING.md  Claude.code-workspace  README.md  claude_desktop_config.sample.json  pyproject.toml  sample_theirstack_response.json
.github/workflows/: python-package.yml
src/gmail/: __init__.py  server.py
src/theirstack/: __init__.py  server.py
