[project]
name = "gmail-theirstack"
version = "0.1.1"
description = "Model Context Protocol server for gmail and theirstack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.1.2",
    "google-api-python-client>=2.156.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "aiohttp>=3.11.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gmail-mcp= "gmail:main"
theirstack-mcp = "theirstack:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail", "src/theirstack"]